--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -15,7 +15,7 @@
 .mail-box .sm-side {
     background: none repeat scroll 0 0 #e5e8ef;
     border-radius: 4px 0 0 4px;
-    width: 25%;
+    width: 20%;
 }
 .mail-box .lg-side {
     background: none repeat scroll 0 0 #fff;
@@ -23,7 +23,7 @@
     width: 75%;
 }
 .mail-box .sm-side .user-head {
-    background: none repeat scroll 0 0 #00a8b3;
+    background: none repeat scroll 0 0 #006816;
     border-radius: 4px 0 0;
     color: #fff;
     min-height: 80px;
@@ -65,14 +65,14 @@ a.mail-dropdown {
     padding: 20px;
 }
 .btn-compose {
-    background: none repeat scroll 0 0 #ff6c60;
+    background: none repeat scroll 0 0 #006816;
     color: #fff;
     padding: 12px 0;
     text-align: center;
     width: 100%;
 }
 .btn-compose:hover {
-    background: none repeat scroll 0 0 #f5675c;
+    background: none repeat scroll 0 0 #003b0b;
     color: #fff;
 }
 ul.inbox-nav {
@@ -137,7 +137,7 @@ ul.labels-info li a i {
     padding: 0 22px;
 }
 .inbox-head {
-    background: none repeat scroll 0 0 #41cac0;
+    background: none repeat scroll 0 0 #003b0b;
     border-radius: 0 4px 0 0;
     color: #fff;
     min-height: 80px;
@@ -159,7 +159,7 @@ ul.labels-info li a i {
     padding: 0 10px;
 }
 .inbox-head .sr-btn {
-    background: none repeat scroll 0 0 #00a6b2;
+    background: none repeat scroll 0 0 #006816;
     border: medium none;
     border-radius: 0 4px 4px 0;
     color: #fff;
