--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -1,10 +1,10 @@
-<%= nav_bar static: :top, brand: "Moja szkoła", responsive: true, fluid: true do %>
+<%= nav_bar fixed: :top, brand: "Moja szkoła", responsive: true, fluid: true do %>
     <%= menu_group do %>
         <%= menu_item "Start", root_path %>
         <%= menu_item "Dziennik", diary_index_path %>
         <%= menu_divider %>
-            <%= menu_item "Nauczyciele", teachers_path %>
-
+        <%= menu_item "Nauczyciele", teachers_path %>
+        <%= menu_item "Wiadomości", messages_path %>
         <%= drop_down "Ustawienia" do %>
             <%= menu_item "Uczniowie", pupils_path %>
             <%= menu_item "Przedmioty", subjects_path %>
@@ -14,5 +14,4 @@
             <%= menu_item "Wyloguj", destroy_user_session_path, method: :delete %>
         <% end %>
     <% end %>
-
 <% end %>
