--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,16 +9,10 @@
 
 <body>
 <%= render 'layouts/menu' %>
-
-<div class="container-fluid">
+<div class="container-fluid" style="padding-top: 50px;">
 <%= render 'layouts/messages' %>
-<div class="container">
  <%= yield %>
 </div>
-</div>
 <%# console %>
-<script>
-
-</script>
 </body>
 </html>
