--- a/app/views/messages/show.html.erb
+++ b/app/views/messages/show.html.erb
@@ -1,17 +1,31 @@
-<p id="notice"><%= notice %></p>
-
-<p>
-  <strong>Title:</strong>
-  <%= @message.title %>
-</p>
-
-<p>
-  <strong>Body:</strong>
-  <%= @message.body %>
-</p>
-
-<% @message.comments.each do |message| %>
-    <p><%= message.body %></p>
-    <% end %>
-<%= link_to 'Edit', edit_message_path(@message) %> |
-<%= link_to 'Back', messages_path %>
+<div class="jumbotron">
+  <h2><%= "#{@message.sender.name} (#{@message.sender.email})" %></h2>
+  <%= link_to 'Skrzynka odbiorczca', messages_path, class: 'btn btn-primary btn-lg' %></p>
+  <strong>Tytuł:</strong>
+  <p>
+    <%= @message.title %>
+  </p>
+  <strong>Treść:</strong>
+  <div class="panel panel-default">
+    <div class="panel-body">
+  <p>
+    <%= @message.body %>
+  </p>
+    </div>
+    </div>
+  <strong>Odpowiedzi:</strong>
+  <p>
+    <% @message.comments.each do |comment| %>
+      <div class="panel panel-default">
+        <div class="panel-body">
+          <%= comment.body %>
+        </div>
+      </div>
+  <% end %>
+  <%= bootstrap_form_for @comment, url: message_create_comment_path(@message) do |f| %>
+      <%= f.text_area :body, label: 'Treść odpowiedzi', rows: 5 %>
+      <%= f.submit 'Wyślij', class: 'btn btn-success btn-lg' %>
+  <%= link_to 'Skrzynka odbiorczca', messages_path, class: 'btn btn-primary btn-lg' %></p>
+  <% end %>
+  </p>
+</div>
