--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -5,6 +5,9 @@
         <%= menu_divider %>
         <%= menu_item 'Nauczyciele', teachers_path %>
         <%= menu_item 'Wiadomości', messages_path %>
+        <% end %>
+
+        <%= menu_group pull: :right do %>
         <%= drop_down 'Ustawienia' do %>
             <%= menu_item 'Uczniowie', pupils_path %>
             <%= menu_item 'Przedmioty', subjects_path %>
