--- a/app/views/pupils/_form.html.erb
+++ b/app/views/pupils/_form.html.erb
@@ -4,6 +4,6 @@
       <%= f.text_field :lastname, label: 'Nazwisko' %>
       <%= f.text_area :note, label: 'Uwagi' %>
       <%= f.submit 'Zapisz', class: 'btn btn-primary' %>
-      <%= link_to 'Anuluj', pupils_path, :class => 'btn btn-default' %>
+      <%= link_to 'Anuluj', pupils_path, class: 'btn btn-default' %>
   <% end %>
 </div>
